--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Hariri 
+Theme Name: Marbles 
 Version: 1.1
 Author: Reynolds Digital
 Author URI: http://www.reynoldsdigital.com/
@@ -162,6 +162,14 @@ header{overflow:hidden;background:#ddd;}
 
 /************** SINGLE POSTS ****************/
 
+/************** PAGES - 404  ****************/
+.fof-error{font-size:150px;margin-top:50px;color:#ccc;}
+.fof-links nav{width:100%;margin:0!important;}
+.fof-links li{float:none!important;margin:0!important;}
+.fof-links li a{display:block;padding:7px 0!important;border-bottom:1px solid #eee;border-right:none!important;}
+.fof-search #searchform, #content #searchform {width:100%;border-right:none;}
+.fof-search #searchform input#s, #content #searchform input#s{background:#eee;border:1px solid #ccc;width:280px;padding:2px 10px;}
+
 
 /************** SIDEBAR ****************/
 #sidebar{}
@@ -178,6 +186,9 @@ footer{clear:both;overflow:hidden;font-size:13px;margin:40px 0 0 0;color:#444;ba
 
 /************** FOOTER WIDGETS****************/   
 footer .column8 .widget-box {float:left;box-sizing:border-box;width:25%;padding:0 10px;}
+
+
+
 
 
 
